<resources>
    <string name="app_name">SIT708_Task8_1C_ChatBot</string>
    
    <!-- Login Screen -->
    <string name="login_title">LLM ChatBot</string>
    <string name="login_subtitle">Enter your username to continue</string>
    <string name="username_hint">Enter your username</string>
    <string name="continue_button">Continue</string>
    <string name="error_empty_username">Please enter a username</string>
    
    <!-- Chat Screen -->
    <string name="chat_title">Chat</string>
    <string name="message_hint">Type a message...</string>
    <string name="send_button">Send</string>
    <string name="logout_button">Logout</string>
    <string name="loading">Loading...</string>
    <string name="error_message">Error: Unable to fetch response</string>
    <string name="empty_chat">No messages yet. Start a conversation!</string>
</resources>